--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
     android:screenOrientation="portrait"
-    tools:context=".MainActivity">
+    tools:context=".Settings">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
@@ -13,7 +13,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_graded" />
+
+    <include layout="@layout/content_about_us" />
+
 
 </android.support.design.widget.CoordinatorLayout>
     <!--android.support.v7.widget.Toolbar android:id="@+id/toolbar"
