--- a/app/src/main/res/layout/content_graded.xml
+++ b/app/src/main/res/layout/content_graded.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#444444"
+    android:background="#271F20"
     android:orientation="vertical"
-    tools:context=".TraceFunction" >
+    tools:context=".GradedTrace" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -19,28 +19,56 @@
             android:contentDescription="@string/start_new"
             android:src="@drawable/new_pic" />
         <ImageButton
+            android:id="@+id/submit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/submit"
+            android:src="@drawable/submit"/>
+        <ImageButton
             android:id="@+id/save_btn"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:contentDescription="@string/save"
             android:src="@drawable/save"/>
-        <ImageButton
-            android:id="@+id/submit"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/submit"
-            android:src="@drawable/submit"/>
     </LinearLayout>
 
     <com.example.conor.trace.DrawingView
         android:id="@+id/drawing"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+        android:layout_width="1200px"
+        android:layout_height="1800px"
+        android:layout_gravity="center"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="3dp"
-        android:layout_weight="1"
-        android:background="#FFFFFFFF" />
+        android:layout_weight="0"
+        android:background="#ffffff" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <!-- Top Row -->
+        <LinearLayout
+            android:id="@+id/paint_colors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+            <ImageButton
+                android:layout_width="@dimen/large_brush"
+                android:layout_height="@dimen/large_brush"
+                android:layout_margin="3dp"
+                android:background="#271F20"
+                android:contentDescription="@string/paint"
+                android:onClick="paintClicked"
+                android:src="@drawable/paint"
+                android:tag="#271F20" />
+        </LinearLayout>
+        <!-- Bottom Row -->
+
+    </LinearLayout>
+
 </LinearLayout>
+
 
