--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,37 +8,34 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:background="#474747">
+    android:background="#000033">
 
 <TextView
-        android:layout_width="230dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/TitleLabel"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="cursive"
+        android:textColor="#FFFF00"
         android:id="@+id/textView"
-        android:textColor="#8080ff"
         android:textStyle="normal"
-        android:textSize="90dp"
+        android:textSize="80dp"
         android:focusableInTouchMode="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/button1label"
         android:textColor="#8080ff"
         android:id="@+id/trace"
         android:background="@drawable/mybutton"
-        android:layout_marginTop="74dp"
         android:textSize="19dp"
+        android:onClick="launchGradedTrace"
         android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        android:onClick="launchGradedTrace" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="61dp" />
 
     <Button
         android:layout_width="wrap_content"
