--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,14 +7,75 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#474747"
+    android:background="@drawable/lines1"
     tools:context=".Settings">
 
-    <ExpandableListView
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="About Us"
+        android:textColor="#000000"
+        android:id="@+id/AboutUs"
+        android:background="@drawable/mybutton"
+        android:textSize="19dp"
+        android:layout_marginTop="171dp"
+        android:onClick="launchAboutUs"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/expandableListView"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:background="#ffffff" />
-</LinearLayout>
+        android:text="About Trace"
+        android:id="@+id/AboutTrace"
+        android:textColor="#000000"
+        android:background="@drawable/mybutton"
+        android:layout_below="@+id/AboutUs"
+        android:layout_marginTop="30dp"
+        android:layout_alignLeft="@+id/AboutUs"
+        android:layout_alignStart="@+id/AboutUs"
+        android:layout_alignRight="@+id/AboutUs"
+        android:layout_alignEnd="@+id/AboutUs"
+        android:textSize="19dp"
+        android:onClick="launchAboutTrace"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:id="@+id/Login"
+        android:background="@drawable/mybutton"
+        android:textColor="#000000"
+        android:layout_below="@+id/AboutTrace"
+        android:layout_marginTop="30dp"
+        android:layout_alignLeft="@+id/AboutTrace"
+        android:layout_alignStart="@+id/AboutTrace"
+        android:layout_alignRight="@+id/AboutTrace"
+        android:layout_alignEnd="@+id/AboutTrace"
+        android:textSize="19dp"
+        android:onClick="launchLogin"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Help"
+        android:id="@+id/Help"
+        android:background="@drawable/mybutton"
+        android:textSize="17dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="launchHelp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Trace.v0.8"
+        android:textColor="#0000a7"
+        android:textSize="18dp"
+        android:id="@+id/textView2"
+        android:layout_alignBottom="@+id/Help"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
